--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,8 @@ dependencies = [
   "pydantic>=2.0.0",
   "tqdm>=4.62.0",
   "nest-asyncio>=1.5.1",
-  "pyyaml>=6.0"
+  "pyyaml>=6.0",
+  "python-dotenv>=1.0.0"
 ]
 dynamic = ["version"]
 
